Added twitch channel to environment variables

--- a/example.env
+++ b/example.env
@@ -15,3 +15,5 @@ TWITCH_USERNAME = 'kappa_master'
 # You can get an oauth token here: https://twitchapps.com/tmi/
 # This will be replaced with a regular oauth login in the future
 TWITCH_OAUTH = 'oauth:123456789'
+
+TWITCH_CHANNEL = "Boot👢"
