--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Vinesauce Bad Joke Counter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
   "homepage": "https://github.com/rguzg/badjokecounter#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "tmi.js": "^1.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
