Added environment variables webhooks

--- a/example.env
+++ b/example.env
@@ -5,15 +5,29 @@ HOST = 'host.com'
 USER = 'hopefully_not_root'
 PASSWORD = '$ecUr3_pa$$w0rD'
 
+# Twitch notifications are signed using this secret, it's recommended that you place a new secret here
+SECRET = 'ooeeooahahbingbingbadabadabingboo'
+
 # This is the database name included in database.sql. If you want to change the database name, 
 # remember to also change the name there
 DB_NAME = 'badjokecounter'
+
+# URL where the server will run
+SERVER_URL = 'url.net'
 
 # Your Twitch username is required to connect to chat
 TWITCH_USERNAME = 'kappa_master'
 
 # You can get an oauth token here: https://twitchapps.com/tmi/
 # This will be replaced with a regular oauth login in the future
-TWITCH_OAUTH = 'oauth:123456789'
+TWITCH_BEARER_TOKEN = '123456789'
+
+# You can find out more about getting your client ID here:
+# https://dev.twitch.tv/docs/v5#getting-a-client-id
+TWITCH_CLIENT_ID = "123456789"
 
 TWITCH_CHANNEL = "Boot👢"
+
+# You can find out more about getting a channel's ID here: 
+# https://dev.twitch.tv/docs/api/reference#search-channels
+TWITCH_CHANNEL_ID = "123456789"
